--- a/src/style.css
+++ b/src/style.css
@@ -584,7 +584,7 @@ nav{
 
 .cursive-heading h6{
   /* font-family:'Monotype Corsiva'; */
-  font-family: 'Lobster', cursive;
+  font-family: 'Great Vibes', cursive;
   animation: color-change 20s infinite;
   animation-delay: 5s;
   /* animation-name: cursive;
